kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo-lb-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-lb-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-lb-app
    spec:
      containers:
      - name: demo-lb-app
        image: jmanzur/demo-lb-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8882
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: lb-app-cm
