kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-lb-app
spec:
  ports:
    - port: 80
      targetPort: 8882
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: demo-lb-app
